--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-streamlit>=1.48.0
+streamlit>=1.28.0
 pandas>=2.0.0
 matplotlib>=3.7.0
-tinkoff-investments>=0.2.0b115
-ta>=0.10.0
-numpy>=1.21.0
-plotly>=5.0.0
-Pillow>=9.0.0
+tinkoff-investments>=0.2.0
+ta>=0.10.2
+numpy>=1.24.0
+plotly>=5.15.0
